src/objects/APTS_RSO_Product_Catalog__c.object
<CustomObject>
    <description>RSO Product Catalog</description>
    <fields>
        <fullName>APTS_Block_for_Selling__c</fullName>
        <formula>IF(OR((ISPICKVAL(APTS_Region__c,&apos;SAP_0111&apos;) &amp;&amp; INCLUDES(APTS_Product__r.APTS_Associated_Sales_Org__c, &apos;SAP_0111&apos;)),
((ISPICKVAL(APTS_Region__c,&apos;SAP_0333&apos;) &amp;&amp; INCLUDES(APTS_Product__r.APTS_Associated_Sales_Org__c, &apos;SAP_0333&apos;))),
((ISPICKVAL(APTS_Region__c,&apos;SAP_0975&apos;) &amp;&amp; INCLUDES(APTS_Product__r.APTS_Associated_Sales_Org__c, &apos;SAP_0975&apos;))),
((ISPICKVAL(APTS_Region__c,&apos;SAP_0976&apos;) &amp;&amp; INCLUDES(APTS_Product__r.APTS_Associated_Sales_Org__c, &apos;SAP_0976&apos;))),
((ISPICKVAL(APTS_Region__c,&apos;SAP_6864&apos;) &amp;&amp; INCLUDES(APTS_Product__r.APTS_Associated_Sales_Org__c, &apos;SAP_6864&apos;))),
((ISPICKVAL(APTS_Region__c,&apos;SAP_6706&apos;) &amp;&amp; INCLUDES(APTS_Product__r.APTS_Associated_Sales_Org__c, &apos;SAP_6706&apos;))),
((ISPICKVAL(APTS_Region__c,&apos;SAP_0080&apos;) &amp;&amp; INCLUDES(APTS_Product__r.APTS_Associated_Sales_Org__c, &apos;SAP_0080&apos;))),
((ISPICKVAL(APTS_Region__c,&apos;SAP_6709&apos;) &amp;&amp; INCLUDES(APTS_Product__r.APTS_Associated_Sales_Org__c, &apos;SAP_6709&apos;))),
((ISPICKVAL(APTS_Region__c,&apos;SAP_6712&apos;) &amp;&amp; INCLUDES(APTS_Product__r.APTS_Associated_Sales_Org__c, &apos;SAP_6712&apos;))),
((ISPICKVAL(APTS_Region__c,&apos;SAP_6750&apos;) &amp;&amp; INCLUDES(APTS_Product__r.APTS_Associated_Sales_Org__c, &apos;SAP_6750&apos;)))),
FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Block for Selling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Text__c</fullName>
        <label>Category Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Value__c</fullName>
        <description>Category from Product</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_01</fullName>
                    <label>Coffee</label>
                </value>
                <value>
                    <fullName>SAP_02</fullName>
                    <label>Tea</label>
                </value>
                <value>
                    <fullName>SAP_03</fullName>
                    <label>&amp; More</label>
                </value>
                <value>
                    <fullName>SAP_04</fullName>
                    <label>Machines</label>
                </value>
                <value>
                    <fullName>SAP_05</fullName>
                    <label>Services</label>
                </value>
                <value>
                    <fullName>SAP_06</fullName>
                    <label>Spare Parts</label>
                </value>
                <value>
                    <fullName>SAP_07</fullName>
                    <label>Concepts</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Cloned_Operating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the RSO record was created as a clone of an existing Operating record because no Routesales PL existed for the Region</description>
        <label>Cloned from Operating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Consignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product2 – check if option group indicator equals “0502”</description>
        <label>Consignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Price_List_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related PLI record</description>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>RSO Product Catalogs</relationshipLabel>
        <relationshipName>APTS_RSO_Product_Catalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <description>Code of the product related with RSO record</description>
        <label>Product Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Icon__c</fullName>
        <formula>APTS_Product__r.Apttus_Config2__Icon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product related with the RSO record</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RSO Product Catalogs</relationshipLabel>
        <relationshipName>RSO_Product_Catalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_RSO_External_Id__c</fullName>
        <description>Field used for Upsert</description>
        <externalId>true</externalId>
        <label>RSO External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Region__c</fullName>
        <description>Region coming from the Price List</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Sales_Org_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related SOD record</description>
        <label>Sales Org Data</label>
        <referenceTo>APTS_Sales_Org_Data__c</referenceTo>
        <relationshipLabel>RSO Product Catalogs</relationshipLabel>
        <relationshipName>APTS_RSO_Product_Catalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Selling_UOM__c</fullName>
        <description>Selling UOM from Price List</description>
        <label>Selling UOM</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Category_Text__c</fullName>
        <label>Sub Category Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Category_Value__c</fullName>
        <description>Sub Category from Product</description>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_0101</fullName>
                    <label>Coffee|Beans</label>
                </value>
                <value>
                    <fullName>SAP_0102</fullName>
                    <label>Coffee|Liquid</label>
                </value>
                <value>
                    <fullName>SAP_0103</fullName>
                    <label>Coffee|Instant</label>
                </value>
                <value>
                    <fullName>SAP_0104</fullName>
                    <label>Coffee|Fresh Brew</label>
                </value>
                <value>
                    <fullName>SAP_0105</fullName>
                    <label>Coffee|Filter Coffee</label>
                </value>
                <value>
                    <fullName>SAP_0106</fullName>
                    <label>Coffee|Coffee Capsules</label>
                </value>
                <value>
                    <fullName>SAP_0107</fullName>
                    <label>Coffee|Coffee Pads</label>
                </value>
                <value>
                    <fullName>SAP_0108</fullName>
                    <label>Coffee|Ice Coffee</label>
                </value>
                <value>
                    <fullName>SAP_0201</fullName>
                    <label>Tea|Pickwick Professional</label>
                </value>
                <value>
                    <fullName>SAP_0202</fullName>
                    <label>Tea|Pickwick Volume Pack</label>
                </value>
                <value>
                    <fullName>SAP_0203</fullName>
                    <label>Tea|Pickwick Tea Master Selection</label>
                </value>
                <value>
                    <fullName>SAP_0204</fullName>
                    <label>Tea|Pickwick Slow Tea</label>
                </value>
                <value>
                    <fullName>SAP_0205</fullName>
                    <label>Tea|Pickwick Machine Tea</label>
                </value>
                <value>
                    <fullName>SAP_0206</fullName>
                    <label>Tea|Pickwick Other</label>
                </value>
                <value>
                    <fullName>SAP_0207</fullName>
                    <label>Tea|Other Tea Brands</label>
                </value>
                <value>
                    <fullName>SAP_0301</fullName>
                    <label>&amp; More|Sugar</label>
                </value>
                <value>
                    <fullName>SAP_0302</fullName>
                    <label>&amp; More|Milk</label>
                </value>
                <value>
                    <fullName>SAP_0303</fullName>
                    <label>&amp; More|Cups</label>
                </value>
                <value>
                    <fullName>SAP_0304</fullName>
                    <label>&amp; More|Chocolate</label>
                </value>
                <value>
                    <fullName>SAP_0305</fullName>
                    <label>&amp; More|Soup</label>
                </value>
                <value>
                    <fullName>SAP_0306</fullName>
                    <label>&amp; More|Coffee Syrup</label>
                </value>
                <value>
                    <fullName>SAP_0307</fullName>
                    <label>&amp; More|Biscuits &amp; Chocolates</label>
                </value>
                <value>
                    <fullName>SAP_0308</fullName>
                    <label>&amp; More|Sweeteners</label>
                </value>
                <value>
                    <fullName>SAP_0309</fullName>
                    <label>&amp; More|Sticks</label>
                </value>
                <value>
                    <fullName>SAP_0310</fullName>
                    <label>&amp; More|Glasses &amp; Porcelain</label>
                </value>
                <value>
                    <fullName>SAP_0311</fullName>
                    <label>&amp; More|Tea display</label>
                </value>
                <value>
                    <fullName>SAP_0312</fullName>
                    <label>&amp; More|Accessoires</label>
                </value>
                <value>
                    <fullName>SAP_0313</fullName>
                    <label>&amp; More|Cleaners</label>
                </value>
                <value>
                    <fullName>SAP_0314</fullName>
                    <label>&amp; More|Merchandise</label>
                </value>
                <value>
                    <fullName>SAP_0315</fullName>
                    <label>&amp; More|Beverages</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Sub_Sub_Category_Text__c</fullName>
        <label>Sub Sub Category Text</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Sub_Category_Value__c</fullName>
        <description>Sub Sub Category from Product</description>
        <label>Sub Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_010101</fullName>
                    <label>Coffee|Beans |Cafe Noir</label>
                </value>
                <value>
                    <fullName>SAP_010102</fullName>
                    <label>Coffee|Beans |Piazza d&apos;Oro</label>
                </value>
                <value>
                    <fullName>SAP_010103</fullName>
                    <label>Coffee|Beans |Douwe Egberts</label>
                </value>
                <value>
                    <fullName>SAP_010104</fullName>
                    <label>Coffee|Beans |Gevalia</label>
                </value>
                <value>
                    <fullName>SAP_010105</fullName>
                    <label>Coffee|Beans |Nordic Roast</label>
                </value>
                <value>
                    <fullName>SAP_010106</fullName>
                    <label>Coffee|Beans |Cafax</label>
                </value>
                <value>
                    <fullName>SAP_010107</fullName>
                    <label>Coffee|Beans |Laurentis</label>
                </value>
                <value>
                    <fullName>SAP_010108</fullName>
                    <label>Coffee|Beans |Kenco</label>
                </value>
                <value>
                    <fullName>SAP_010109</fullName>
                    <label>Coffee|Beans |L&apos;Or</label>
                </value>
                <value>
                    <fullName>SAP_010110</fullName>
                    <label>Coffee|Beans |Friele</label>
                </value>
                <value>
                    <fullName>SAP_010111</fullName>
                    <label>Coffee|Beans |Krone</label>
                </value>
                <value>
                    <fullName>SAP_010112</fullName>
                    <label>Coffee|Beans |Norwegian Roast</label>
                </value>
                <value>
                    <fullName>SAP_010113</fullName>
                    <label>Coffee|Beans |House of Coffee</label>
                </value>
                <value>
                    <fullName>SAP_010114</fullName>
                    <label>Coffee|Beans |Illy</label>
                </value>
                <value>
                    <fullName>SAP_010115</fullName>
                    <label>Coffee|Beans |Marcilla</label>
                </value>
                <value>
                    <fullName>SAP_010116</fullName>
                    <label>Coffee|Beans |Marcilla - Professional</label>
                </value>
                <value>
                    <fullName>SAP_010117</fullName>
                    <label>Coffee|Beans |Saimaza</label>
                </value>
                <value>
                    <fullName>SAP_010118</fullName>
                    <label>Coffee|Beans |Saimaza - Professional</label>
                </value>
                <value>
                    <fullName>SAP_010119</fullName>
                    <label>Coffee|Beans |Soley</label>
                </value>
                <value>
                    <fullName>SAP_010120</fullName>
                    <label>Coffee|Beans |Jacobs</label>
                </value>
                <value>
                    <fullName>SAP_010121</fullName>
                    <label>Coffee|Beans |HAG</label>
                </value>
                <value>
                    <fullName>SAP_010122</fullName>
                    <label>Coffee|Beans |Splendid</label>
                </value>
                <value>
                    <fullName>SAP_010201</fullName>
                    <label>Coffee|Liquid|Cafe Noir</label>
                </value>
                <value>
                    <fullName>SAP_010202</fullName>
                    <label>Coffee|Liquid|Douwe Egberts</label>
                </value>
                <value>
                    <fullName>SAP_010203</fullName>
                    <label>Coffee|Liquid|Friele</label>
                </value>
                <value>
                    <fullName>SAP_010204</fullName>
                    <label>Coffee|Liquid|Kenco</label>
                </value>
                <value>
                    <fullName>SAP_010205</fullName>
                    <label>Coffee|Liquid|Promesso</label>
                </value>
                <value>
                    <fullName>SAP_010206</fullName>
                    <label>Coffee|Liquid|L&apos;Or</label>
                </value>
                <value>
                    <fullName>SAP_010207</fullName>
                    <label>Coffee|Liquid|Gevalia</label>
                </value>
                <value>
                    <fullName>SAP_010208</fullName>
                    <label>Coffee|Liquid|Marcilla</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <description>Define the type of RSO record</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operating</fullName>
                </value>
                <value>
                    <fullName>Routesales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RSO Product Catalog</label>
    <nameField>
        <displayFormat>RSO-{0000000000}</displayFormat>
        <label>RSO Product Catalog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSO Product Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>